# sdl2-multiplatform-test

./: .gitignore  CMakeLists.txt  LICENSE-Roboto  README.md  game.js  game.wasm  index.html
src/: main.cpp
